--- a/css/styles.css
+++ b/css/styles.css
@@ -65,3 +65,23 @@ p {
 .icon:hover {
   color: #ff4c68;
 }
+
+/* TESTIMONIAL SECTION */
+.testimonials {
+  text-align: center;
+  padding: 5%;
+  background-color: #ef8172;
+  color: #fff;
+}
+h2 {
+  font-family: "Monseratt-Bold";
+  font-size: 2rem;
+  line-height: 1.5;
+  width: 50%;
+  margin: 0 auto 30px auto;
+}
+.testimonials-img {
+  border-radius: 100%;
+  width: 20%;
+  margin: 20px;
+}
