--- a/css/styles.css
+++ b/css/styles.css
@@ -75,7 +75,6 @@ p {
 /* TESTIMONIAL SECTION */
 .testimonials {
   text-align: center;
-  padding: 5%;
   background-color: #ef8172;
   color: #fff;
 }
@@ -90,7 +89,7 @@ h2 {
 
 .testimonial-img {
   border-radius: 100%;
-  width: 20%;
+  width: 50%;
   margin: 20px;
 }
 
@@ -105,6 +104,21 @@ padding-bottom: 3%;
   width: 15%;
   margin: 20px 20px 50px;
 }
+.carousel-item {
+padding: 7% 15%;
+}
 .bg-transparent {
   border: none;
+}
+
+/* PRICING SECTION */
+.pricing {
+  padding: 100px;
+  text-align: center;
+}
+.pricing-column {
+  padding: 3% 2%;
+}
+.btn-block {
+  padding: 2% 30%;
 }
