--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,7 @@ body {
 }
 
 .container-fluid {
-  padding: 3% 5%;
+  padding: 3% 15%;
 }
 
 h1 {
@@ -19,35 +19,41 @@ h1 {
 
 /* NAVBAR */
 .navbar {
-  padding: 0 0 4rem;
+  padding: 0 0 4.5rem;
 }
 
 .navbar-brand {
   font-family: "Ubuntu";
-  font-size: 2rem;
+  font-size: 2.5rem;
   font-weight: bold;
 }
 
 .nav-item {
   padding: 0 18px;
 }
+.nav-link {
+  font-size: 1.2rem;
+  font-family: "Monseratt"
+}
 
 /* DOWNLOAD BTN */
 .download-btn {
-  margin: 3% 5% 3% 0;
+  margin: 5% 3% 5% 0;
 }
 
 /* TITLE IMAGE */
 .title-img {
-  margin-left: 10%;
-  width: 50%;
+  width: 20%;
   transform: rotate(15deg);
+  position: absolute;
+  right: 15%;
 }
 
 /* FEATURE SECTION */
 .features {
   padding: 7% 15%;
   background-color: #fff;
+  position: relative;
 }
 
 .feature-box {
@@ -127,4 +133,17 @@ h2 {
 
 .btn-block {
   padding: 2% 30%;
+}
+
+
+/* MEDIA QUERY */
+@media (max-width: 1028px) {
+.title {
+  text-align: center;
+}
+.title-img {
+  position: static;
+  transform: rotate(0);
+  width: 80%;
+}
 }
