--- a/css/styles.css
+++ b/css/styles.css
@@ -135,11 +135,47 @@ h2 {
   padding: 2% 30%;
 }
 
+/* CALL TO ACTION SECTION */
+.cta {
+  background-color: #ff4c68;
+  padding: 7% 15%;
+  color: #fff;
+  text-align: center;
+}
+.cta-heading {
+  font-family: "Monseratt-Black";
+  font-size: 3.5rem;
+  line-height: 1.5;
+}
+
+/* FOOTER */
+#footer {
+  padding: 7% 15%;
+  text-align: center;
+}
+.social-icon {
+  margin: 20px 10px;
+}
+
+
+
+
+
+
+
+
+
+
+
 
 /* MEDIA QUERY */
 @media (max-width: 1028px) {
 .title {
   text-align: center;
+}
+h1, h2 {
+  font-size: 1.5rem;
+  font-weight: bolder;
 }
 .title-img {
   position: static;
